feat: quantity parameter
