# src/endpoints/randomPersona.ts
@@ -2,7 +2,7 @@ import { Request, Response } from 'express';
 import { pickRandomAge, pickRandomItem } from '../utils/pickRandomItem.js';
 import { dataToJSON } from '../utils/dataToJSON.js';
 import { formatName } from '../utils/formatName.js';
-import { isGenderValid } from '../utils/dataValidation.js';
+import { isGenderValid, isQuantityValid } from '../utils/dataValidation.js';
 
 export function randomPersona(
   req: Request,
@@ -16,10 +16,23 @@ export function randomPersona(
   const occupations = dataToJSON(`${dataPath}/occupation.json`);
 
   // parameters
-  let gender = pickRandomItem(['male', 'female']);
+  let quantity = 1;
+  if (req.query.quantity) {
+    if (isQuantityValid(req.query.quantity)) {
+      quantity = Number(req.query.quantity);
+    } else {
+      res.status(400).send({
+        success: false,
+        message:
+          'Bad parameter - quantity. The quantity must be a number between 1 and 1000.',
+      });
+      return;
+    }
+  }
+  let requestedGender: string | null = null;
   if (req.query.gender) {
     if (isGenderValid(req.query.gender)) {
-      gender = req.query.gender.toString();
+      requestedGender = req.query.gender.toString();
     } else {
       res.status(400).send({
         success: false,
@@ -28,25 +41,29 @@ export function randomPersona(
       return;
     }
   }
-  const age = pickRandomAge(18, 88); // ages from 18 to 88
-  const name = {
-    first: pickRandomItem(firstNames.data[gender]),
-    last: pickRandomItem(lastNames.data),
-  };
-  const fullName = name.first + ' ' + name.last;
 
-  // pick random persona
-  const randomPersona = {
-    name: name,
-    gender: gender,
-    age: age,
-    occupation: pickRandomItem(occupations.data),
-    avatar: `${avatarURL}/${gender}/${formatName(fullName)}.svg`,
-  };
+  // pick random personas
+  const randomPersonas = [];
+  for (let i = 0; i < quantity; i++) {
+    const gender = requestedGender || pickRandomItem(['male', 'female']);
+    const age = pickRandomAge(18, 88);
+    const name = {
+      first: pickRandomItem(firstNames.data[gender]),
+      last: pickRandomItem(lastNames.data),
+    };
+    const fullName = name.first + ' ' + name.last;
 
-  console.log(randomPersona);
+    randomPersonas.push({
+      name: name,
+      gender: gender,
+      age: age,
+      occupation: pickRandomItem(occupations.data),
+      avatar: `${avatarURL}/${gender}/${formatName(fullName)}.svg`,
+    });
+  }
+
   res.status(200).json({
     success: true,
-    data: randomPersona,
+    data: randomPersonas,
   });
 }
